# pum

./: .gitignore  pyproject.toml
lab1/: ames_transformer.joblib  high_price_estimator.joblib  low_price_estimator.joblib  notebook.html  notebook.ipynb  price_estimator.joblib
lab2/: notebook.html  notebook.ipynb
lab3/: notebook.html  notebook.ipynb
lab4/: notebook.html  notebook.ipynb
lab5/: notebook.html  notebook.ipynb
lab6/: notebook.html  notebook.ipynb
lab7/: notebook.html  notebook.ipynb
