[project]
name = "basics-of-machine-learning"
version = "1.0.0"
description = ""
authors = [{name = "Jakub Adamczyk (j-adamczyk)", email = "jadamczy@agh.edu.pl"}]
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "feature_engine",
    "imblearn>=0.0",
    "jupyter",
    "matplotlib",
    "pandas==2.*",
    "pillow",
    "pyarrow",
    "pynndescent",
    "pyod>=2.0.5",
    "scikit-fingerprints",
    "scikit-learn",
    "seaborn",
    "sentence_transformers",
    "torch",
    "tqdm",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]
exclude = ["**notebook.ipynb"]
